# Cawler-practice

./: .gitignore  README.md  p02_ptt.py  p03_ptt_content.py  p03_ptt_content_getstring.py  p06_selenium_dcard.py  p10_pandas_ptt.ipynb  p11_pandas_concat.ipynb  p13_data_pipeline.py  ptt.csv  ptt_nocolumn.csv  pyproject.toml
crawler/: p01_requests.ipynb  p03_ptt_content_getstring.py  p04_json.py  p05_selenium_ptt.py  p07_selenium_ptt_practice.py  p09_pandas_practice.ipynb  p10_pandas_ptt.ipynb  p11_pandas_concat.ipynb  p12_cumcount.ipynb
tests/: Heli.py
