[tool.poetry]
name = "pyetl"
version = "0.1.0"
description = ""
authors = ["Spark <Spark.cs.liao@gmail.com>"]
readme = "README.md"
packages = [
    {include = "crawler"},
    {include = "flask"},
]

[tool.poetry.dependencies]
python = "3.12.5"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.26.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
